# emba-tuition-model

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  main.py  package-lock.json  package.json  pyproject.toml
src/emba_tuition_model/: cli.py  config.py  optimize.py  simulation.py
src/emba_tuition_model/data/: default_config.json
