[project]
name = "emba-tuition-model"
version = "0.1.0"
description = "Tuition optimization model for SEU EMBA program"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.0",
]

[project.scripts]
cli = "emba_tuition_model.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
